k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopdemo-ingress
  namespace: shopdemo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: shopdemo.local
      http:
        paths:
          - path: /catalog(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopdemo-catalog
                port:
                  number: 8080
          - path: /orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopdemo-orders
                port:
                  number: 8080
          - path: /inventory(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopdemo-inventory
                port:
                  number: 8080
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopdemo-analytics
                port:
                  number: 8080
